--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "sonata-project/doctrine-extensions": "~1.0",
         "sonata-project/media-bundle": "2.3.0",
         "jms/serializer-bundle": "~0.13",
-        "jms/di-extra-bundle": "1.4.*@dev"
+        "jms/di-extra-bundle": "1.4.*@dev",
+        "imag/ldap-bundle": "v2.3.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
