--- a/src/Indholdskanalen/MainBundle/Resources/config/services.yml
+++ b/src/Indholdskanalen/MainBundle/Resources/config/services.yml
@@ -62,3 +62,8 @@ services:
     arguments: [sonata.media.provider.zencoder, '@sonata.media.filesystem.local', '@sonata.media.cdn.server', '@sonata.media.generator.default', '@sonata.media.thumbnail.format', '%absolute_path_to_server%', '%zencoder_api%']
     calls:
       - [setTemplates, [{ helper_thumbnail: 'SonataMediaBundle:Provider:thumbnail.html.twig', helper_view: 'SonataMediaBundle:Provider:view_video.html.twig' }]]
+
+  ldap.listener:
+    class: Indholdskanalen\MainBundle\EventListener\LdapSecuritySubscriber
+    tags:
+      - { name: kernel.event_subscriber }
