Issue #AR-149 by tuj: Fixed recursive bug with ldap user. Added logged in as text in nav menu. Reenabled fos_userbundle login

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,7 +38,7 @@ security:
       pattern: ^/
       anonymous: ~
       imag_ldap:
-        provider: ldap
+        provider: fos_userbundle
       logout:
         path:           /logout
         target:         /
